--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
+    {% if not request.get_host == 'localhost:8000' %}
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1987584597836949"
             crossorigin="anonymous"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-BVB1G38F8L"></script>
@@ -43,6 +44,7 @@
         gtag('js', new Date());
         gtag('config', 'G-BVB1G38F8L');
     </script>
+    {% endif %}
     <script type="text/javascript" src="{% static 'notification.js' %}"></script>
     <script type="text/javascript" src="{% static 'base.js' %}"></script>
     <script>
