--- a/templates/base.html
+++ b/templates/base.html
@@ -249,6 +249,7 @@
         <div class="mb-2" id="from_board_group"></div>
     </nav>
     <div class="row">
+        {% block my_profile %}{% endblock %}
         <div class="col-12 mb-3">{% block lesson %}{% endblock %}</div>
         <div class="col-12 mb-3">{% block top %}{% endblock %}</div>
         <div class="col-sm-12 col-md-7 col-lg-8 col-xl-8 col-xxl-9">{% block middle_left %}{% endblock %}</div>
