Feat: Add image media
- Add image media

--- a/board/templates/board/home.html
+++ b/board/templates/board/home.html
@@ -152,7 +152,7 @@
 <div class="col-sm-12 col-md-5 col-lg-4 col-xl-4 col-xxl-3">
     <div style="display: flex; flex-direction: column;">
         <div class="profile-image"
-             style="width: 260px; height: 260px; border-radius: 50%; background-image: url('{{ profile_image_url }}'); background-size: cover; background-position: center; margin: 15px 0; align-self: center;"></div>
+             style="width: 260px; height: 260px; border: solid #F5F5F5 2px; border-radius: 50%; background-image: url('{{ profile_image_url }}'); background-size: 90% auto; background-repeat: no-repeat; background-position: center; margin: 15px 0; align-self: center;"></div>
         <h4>{{ profile_name }}</h4>
     </div>
     <div class="profile-simple-description">
