--- a/templates/email/common/post_summary_issue.html
+++ b/templates/email/common/post_summary_issue.html
@@ -14,6 +14,7 @@
             <h1 style="color: #333333;">An issue has been detected!</h1>
             <p style="color: #666666;">We have identified a problem with one or more systems. Our team is working on resolving the issue as soon as possible.</p>
             <p style="color: #666666;">Please check back for updates or contact support if needed.</p>
+            <p>{{ exception_message }}</p>
         </div>
         <div style="text-align: center; padding: 10px; color: #999999; font-size: 12px;">
             &copy; 2024 cwbeany.com Check, All rights reserved.
